@@ -12,6 +12,7 @@
  - move trialengine2d out of trial and into master
  - add 2 sides (player/ opponent), or even leave it open for any number of players
  - add AI (well, obviously)
+ - add order markers (objects indicating, where a unit is going, firing etc.)
 
 Done:
  +/- move generic tank properties into a C++ QObject
@@ -27,3 +28,4 @@ Done:
  + make tanks more flexible (make it easier to add new, modified ones based on the existing)
  + add unified path searching (something like $PWD would be nice to begin with), so that different
    components and files can be moved around and found more easily
+ + add group orders (example: moving 3 selected units)
